tests/sumo/meso/junction_control/tls_coordination/good/control_tlsPenalty/output.sumo
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... done (1ms).
Loading done.
Simulation version v1_3_1+1083-5d228cb4f4 started with time: 0.00
Simulation ended at time: 152.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 4ms
 Real time factor: 38000
 UPS: 358500.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Duration: 47.80
 WaitingTime: 0.00
 TimeLoss: 25.76
 DepartDelay: 15.97

