tests/sumo/meso/junction_control/tls_coordination/bad/control.limited/output.sumo
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_3_1+1083-5d228cb4f4 started with time: 0.00
Simulation ended at time: 107.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 4ms
 Real time factor: 26750
 UPS: 220000.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Duration: 29.33
 WaitingTime: 0.47
 TimeLoss: 7.26
 DepartDelay: 0.00

